// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio check component controlled 1`] = `
<div>
  <div
    class="pf-c-radio pf-m-standalone"
  >
    <input
      aria-invalid="false"
      aria-label="check"
      checked=""
      class="pf-c-radio__input"
      data-ouia-component-id="OUIA-Generated-Radio-1"
      data-ouia-component-type="PF4/Radio"
      data-ouia-safe="true"
      id="check"
      name="check"
      type="radio"
    />
  </div>
</div>
`;

exports[`Radio check component isDisabled 1`] = `
<div>
  <div
    class="pf-c-radio pf-m-standalone"
  >
    <input
      aria-invalid="false"
      aria-label="check"
      class="pf-c-radio__input"
      data-ouia-component-id="OUIA-Generated-Radio-3"
      data-ouia-component-type="PF4/Radio"
      data-ouia-safe="true"
      disabled=""
      id="check"
      name="check"
      type="radio"
    />
  </div>
</div>
`;

exports[`Radio check component isLabelBeforeButton 1`] = `
<div>
  <div
    class="pf-c-radio"
  >
    <label
      class="pf-c-radio__label"
      for="check"
    >
      Radio label
    </label>
    <input
      aria-invalid="false"
      class="pf-c-radio__input"
      data-ouia-component-id="OUIA-Generated-Radio-4"
      data-ouia-component-type="PF4/Radio"
      data-ouia-safe="true"
      id="check"
      name="check"
      type="radio"
    />
  </div>
</div>
`;

exports[`Radio check component isLabelWrapped 1`] = `
<div>
  <label
    class="pf-c-radio"
    for="check"
  >
    <input
      aria-invalid="false"
      class="pf-c-radio__input"
      data-ouia-component-id="OUIA-Generated-Radio-5"
      data-ouia-component-type="PF4/Radio"
      data-ouia-safe="true"
      id="check"
      name="check"
      type="radio"
    />
    <span
      class="pf-c-radio__label"
    >
      Radio label
    </span>
  </label>
</div>
`;

exports[`Radio check component label is function 1`] = `
<div>
  <div
    class="pf-c-radio"
  >
    <input
      aria-invalid="false"
      checked=""
      class="pf-c-radio__input"
      data-ouia-component-id="OUIA-Generated-Radio-7"
      data-ouia-component-type="PF4/Radio"
      data-ouia-safe="true"
      id="check"
      name="check"
      type="radio"
    />
    <label
      class="pf-c-radio__label"
      for="check"
    >
      <h1>
        Header
      </h1>
    </label>
  </div>
</div>
`;

exports[`Radio check component label is node 1`] = `
<div>
  <div
    class="pf-c-radio"
  >
    <input
      aria-invalid="false"
      checked=""
      class="pf-c-radio__input"
      data-ouia-component-id="OUIA-Generated-Radio-8"
      data-ouia-component-type="PF4/Radio"
      data-ouia-safe="true"
      id="check"
      name="check"
      type="radio"
    />
    <label
      class="pf-c-radio__label"
      for="check"
    >
      <h1>
        Header
      </h1>
    </label>
  </div>
</div>
`;

exports[`Radio check component label is string 1`] = `
<div>
  <div
    class="pf-c-radio"
  >
    <input
      aria-invalid="false"
      checked=""
      class="pf-c-radio__input"
      data-ouia-component-id="OUIA-Generated-Radio-6"
      data-ouia-component-type="PF4/Radio"
      data-ouia-safe="true"
      id="check"
      name="check"
      type="radio"
    />
    <label
      class="pf-c-radio__label"
      for="check"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`Radio check component passing HTML attribute 1`] = `
<div>
  <div
    class="pf-c-radio"
  >
    <input
      aria-invalid="false"
      aria-labelledby="labelId"
      checked=""
      class="pf-c-radio__input"
      data-ouia-component-id="OUIA-Generated-Radio-10"
      data-ouia-component-type="PF4/Radio"
      data-ouia-safe="true"
      id="check"
      name="check"
      type="radio"
    />
    <label
      class="pf-c-radio__label"
      for="check"
    >
      label
    </label>
  </div>
</div>
`;

exports[`Radio check component passing class 1`] = `
<div>
  <div
    class="pf-c-radio class-123"
  >
    <input
      aria-invalid="false"
      checked=""
      class="pf-c-radio__input"
      data-ouia-component-id="OUIA-Generated-Radio-9"
      data-ouia-component-type="PF4/Radio"
      data-ouia-safe="true"
      id="check"
      name="check"
      type="radio"
    />
    <label
      class="pf-c-radio__label"
      for="check"
    >
      label
    </label>
  </div>
</div>
`;

exports[`Radio check component uncontrolled 1`] = `
<div>
  <div
    class="pf-c-radio pf-m-standalone"
  >
    <input
      aria-invalid="false"
      aria-label="check"
      class="pf-c-radio__input"
      data-ouia-component-id="OUIA-Generated-Radio-2"
      data-ouia-component-type="PF4/Radio"
      data-ouia-safe="true"
      id="check"
      name="check"
      type="radio"
    />
  </div>
</div>
`;
